[tool.poetry]
name = "py16web-hw06"
version = "0.1.0"
description = ""
authors = ["djmary-k <kondratyukmv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
faker = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
